style : style updated
added styling

--- a/index.html
+++ b/index.html
@@ -17,106 +17,13 @@
         </form>
     </header>
 
+    <div id="genreList" class="genre-list"></div>
+    <button id="clearGenres" class="clear-Genres">Clear Filters</button>
+
+
     <main id="main">
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-                possimus illum vel obcaecati dolorem quas aspernatur non quod doloribus, neque sequi voluptatibus nobis
-                eum
-                natus.
-            </div>
-        </div>
-
-
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-                possimus illum vel obcaecati dolorem quas aspernatur non quod doloribus, neque sequi voluptatibus nobis
-                eum
-                natus.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-                possimus illum vel obcaecati dolorem quas aspernatur non quod doloribus, neque sequi voluptatibus nobis
-                eum
-                natus.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-                possimus illum vel obcaecati dolorem quas aspernatur non quod doloribus, neque sequi voluptatibus nobis
-                eum
-                natus.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-                possimus illum vel obcaecati dolorem quas aspernatur non quod doloribus, neque sequi voluptatibus nobis
-                eum
-                natus.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1610018556010-6a11691bc905?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80"
-                alt="image">
-            <div class="movie-info">
-                <h3>movie title</h3>
-                <span class="green">9.8</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, recusandae eius rerum quibusdam amet
-
-            </div>
-        </div>
 
     </main>
-
     <script src="script.js"></script>
 </body>
 
