--- a/index.html
+++ b/index.html
@@ -20,12 +20,22 @@
     </header>
 
     <div id="genreList" class="genre-list"></div>
+
+    <!-- clear genre button -->
     <button id="clearGenres" class="clear-Genres">Clear Filters</button>
 
 
+    <!-- movie cards div -->
     <main id="main">
 
     </main>
+
+    <!-- pagination -->
+    <div class="pagination">
+        <div class="page disabled" id="prev">Previous Page</div>
+        <div class="current" id="current">1</div>
+        <div class="page" id="next">Next Page</div>
+    </div>
     <script src="script.js"></script>
 </body>
 
